# composex-testing-apps

./: .dockerignore  .gitignore  Makefile  README.rst  buildspec.yml  docker-compose.yml  pyproject.toml  x-appmesh.yaml
app01/: Dockerfile  app.py  config.py  docker-compose.yml  entrypoint.sh  nginx.conf  requirements.txt  start_app.py  supervisord.config
app01/app/: __init__.py
app01/app01/: __init__.py
app02/: Dockerfile  Makefile  app.py  config.py  requirements.txt  supervisord.config
app02/app/: __init__.py  views.py
app02/app02/: __init__.py  views.py
cicd/: README.rst
envs/: dev.yml  local.yml  prod.yml  stg.yml
reverse_proxy/: Dockerfile  rproxy.conf
